# syshawk

./: .gitignore  Cargo.toml
syshawk/: Cargo.toml  Rocket.toml  probes.json
syshawk-app/: package.json  pnpm-lock.yaml
syshawk-app/src/: Router.tsx  index.css  main.tsx
syshawk-app/src/components/: FsDisplay.tsx  cpuCores.tsx  memory.tsx  probe.tsx  probeInfo.tsx
syshawk-app/src/lib/: sysinfo.ts
syshawk-app/src/pages/: Home.tsx  single.tsx
syshawk-app/src/shared/: env.ts  query.ts
syshawk-app/src/utils/: format.ts
syshawk-app/types/: sysinfo.ts  system.ts
syshawk/migrations/: 20240816162433_tables.sql
syshawk/page/: index.html
syshawk/page/error/: 500.html
syshawk/src/: main.rs
syshawk/src/database/: history.rs  mod.rs  probe.rs
syshawk/src/models/: history_row.rs  mod.rs  probe.rs  status.rs
syshawk/src/probe/: probe.rs
syshawk/src/routes/: api.rs  mod.rs  ssr.rs
syshawk/src/templates/: button.rs  header.rs  mod.rs  progress_bar.rs  sysinfo.rs
syshawk_probe/: Cargo.toml  Rocket.toml
syshawk_probe/src/: main.rs
syshawk_templating/: Cargo.toml
syshawk_templating/src/: attribute.rs  html.rs  lib.rs  node.rs
syshawklib/: Cargo.toml
syshawklib/src/: cpu.rs  fs.rs  lib.rs  memory.rs  system.rs
