[package]
name = "syshawkwatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38" , features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio", "chrono"] }
syshawklib = { path = "../syshawklib" }
syshawk_templating = { path = "../syshawk_templating" }
tokio = { version = "1.39.2", features = ["full"] }
dotenvy = "0.15.7"
rocket_cors = "0.6.0"

